--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,4 @@ plotly==5.14.1
 streamlit==1.28.0
 openpyxl==3.1.2
 
-# development environment: --editable install in development mode (includes all extras_require)
--e .[dev,test,docs]
-# exact (transitive) dependency versions used in development
-google-api-python-client==2.65.0
-httplib2==0.20.4
-uritemplate==4.1.1
-six==1.16.0
-oauth2client==4.1.3
-rsa==4.9
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
+git+https://github.com/streamlit/gsheets-connection
