--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 pandas==2.0.1
 Pillow==10.1.0
 plotly==5.14.1
-streamlit==1.28.0
 openpyxl==3.1.2
-
+streamlit==1.22
 git+https://github.com/streamlit/gsheets-connection
+pandasql  # this is for example/st_app.py only
