--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ streamlit
 st-gsheets-connection=3.2.2
 git+https://github.com/streamlit/gsheets-connection
 pandasql  # this is for example/st_app.py only
+matplotlib.pyplot
+wordcloud
+streamlit_extras
